--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
-    "node-sass": "^7.0.1",
+    "node-sass": "^9.0.0",
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
     "vue-lottie": "^0.2.1",
     "vue-router": "^3.6.5",
-    "vue-slick-carousel": "^1.0.6",
+    "vue-slick-carousel": "^1.0.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
