--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
-    "node-sass": "^9.0.0",
+    "sass": "^1.77.6",
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
     "vue-lottie": "^0.2.1",
