--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -223,6 +223,24 @@
             "tags": [],
             "slug": "others",
             "items": []
+        },
+        {
+            "id": 10,
+            "category": "package design",
+            "cover": "portfolio/amazon-content/amazon.png",
+            "tags": [],
+            "slug": "package-design",
+            "items": [
+                {
+                    "id": 15,
+                    "label": "Antibarking Package Design",
+                    "cover": "package-design/multiply-antibarking-package/img1.png",
+                    "video": "",
+                    "images": [
+                        "package-design/multiply-antibarking-package/img1.png"
+                    ]
+                }
+            ]
         }
     ]
 }
